:lipstick: fix tijdschema on mobile

--- a/src/pages/styles/lineup.module.css
+++ b/src/pages/styles/lineup.module.css
@@ -46,4 +46,7 @@
     .dayRow {
       flex-direction: column;
     }
+    .stageColumn {
+      width: 100%;
+    }
   }
